# bg-screenshoot

./: .gitignore  .pre-commit-config.yaml  README.md  config.example.yaml  config.yaml  config_dialog.py  config_manager.py  pyproject.toml  pytest.ini  region_selector.py  requirements.txt  screenshot_capture.py  screenshot_tray.py  start_screenshots.bat  start_screenshots_on_taskmanager.vbs  start_screenshots_silent.vbs  start_screenshots_tray.bat  view_log.bat
docs/: AUTH_COMPARISON.md  BACKGROUND_EXECUTION.md  ERROR_403_FIX.md  ERROR_HANDLING.md  GDRIVE_SETUP.md  PRE_COMMIT_GUIDE.md  PYTHON_GUIDELINES.md
src/: __init__.py  config_dialog.py  config_manager.py  screenshot_capture.py  screenshot_tray.py
tests/: README.md  __init__.py  conftest.py  test_circuit_breaker.py  test_config_manager.py  test_error_handling.py  test_region_selector.py  test_screenshot_capture.py
