[project]
name = "bg-screenshoot"
version = "0.1.0"
requires-python = ">=3.13,<3.14"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# Python version
target-version = "py313"

# Line length
line-length = 120

# Exclude directories
exclude = [
    ".venv",
    "__pycache__",
    "*.egg-info",
    ".pytest_cache",
    "htmlcov",
]

[tool.ruff.lint]
# Enable rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function call in argument defaults
    "N802",   # Function name should be lowercase (allows _on_press style)
    "SIM108", # Use ternary operator (sometimes less readable)
]

[tool.ruff.lint.per-file-ignores]
# Test files can have longer lines and unused imports
"tests/**/*.py" = ["F401", "F811"]

[tool.ruff.format]
# Use Black-compatible formatting
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.isort]
# Import sorting
known-first-party = ["src.config_manager", "src.screenshot_tray", "src.screenshot_capture", "src.region_selector", "src.config_dialog"]
